# Clothoids

.github/workflows/: ci.yml
src_py/: CMakeLists-Flags.txt  CMakeLists.txt  exports.def
src_py/src/: python-G2lib.cc
